# ppp

./: .gitignore  .twitter.html.swp  CNAME  README.md  about.html  blog.html  boxFunctions.js  config.json  index.html  paywall.html  random.html  report.txt  search.txt  style.css  twitter.html  urls.txt  work.html  zoho-domain-verification.html
.diary/: notes  people
.diary/navigator/: template
.misc/: notes
.misc/navigator/: Makefile
.misc/people/: diary  (+5 more)
content/: 961.html  9610.html  9611.html  9612.html  9613.html  9614.html  962.html  963.html  964.html  965.html  966.html  967.html  968.html  969.html  981.html  9810.html  98100.html  98101.html  98102.html  98103.html  98104.html  98105.html  98106.html  98107.html  98108.html  98109.html  9811.html  98110.html  98111.html  98112.html  98113.html  98114.html  98115.html  98116.html  98117.html  98118.html  9812.html  9813.html  9814.html  9815.html  (+132 more)
css/: about.css  about.css.map  cube.css  loadcube.css  random.css  style.css  style.css.map  twitter.css  twitter.css.map
generation1/: report.txt
generation1/programming/programs/fileScatterer/: README.md  fileScatterer.cabal
generation1/programming/programs/fileScatterer/src/: Displaystuff.hs  Loop.hs
generation3/: README.md
js/: fades.js
people/: README.md
people/benchmark/fameCalculator/: fame.cabal  fameCalculator.cabal
people/benchmark/fameCalculator/src/: Main.hs  getData.js
people/benchmark/fameCalculator/src/Fame/: Calculations.hs  NetProcess.hs  Process.hs  Show.hs  Welcome.hs
portfolio/: port1.html  port3.html  port4.html
programming/: README.md
programming/programs/fameCalculator/: Makefile  README.md  fameCalculator.cabal
programming/programs/fameCalculator/src/: getData.js
programming/programs/fameCalculator/src/Fame/: Process.hs
programming/src/speedReader/: Makefile  speedReader.cabal
programming/src/speedReader/src/: Main.hs
programming/src/speedReader/src/SpeedReader/: File.hs  Utils.hs
property/: README.md
scss/: .style.scss.swp  style.scss  twitter.scss  updatecss
site/: linkedin.html  twitter.html
(+128 files in other folders)
