name:                fame
version:             0.1.0.0
author:              ozuski
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable fame
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.9,
                       process >= 1.6.2.0
