name:                fameCalculator
version:             1.0
author:              ozuski
build-type:          Simple
cabal-version:       >=1.10

executable fame
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.9,
                       process >= 1.6.2.0,
                       directory >= 1.3.1.5
