name:                speedReader
version:             0.1.0.0
author:              ozuski
maintainer:           
build-type:          Simple
cabal-version:       >=1.10

executable speedReader
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9, 
                       strings >=1.1 && <1.2, 
                       ansi-terminal >=0.7 && <0.8, 
                       terminal-size >=0.3 && <0.4,
                       process >= 1.6.2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
