name:                fileScatterer
version:             2.0
author:              ozuski
build-type:          Simple
cabal-version:       >=1.10

executable fileScatterer
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       strings >=1.1 && <1.2,
                       terminal-size >=0.3 && <0.4,
                       directory >=1.3 && <1.4,
                       process >=1.6 && <1.7
  hs-source-dirs:      src
  default-language:    Haskell2010
